# EasyToolApp

./: .gitattributes  .gitignore  AGENTS.md  README.md  dewu_clipboard_image_search.py  dewu_image_saver.py  index.html  package-lock.json  package.json
docs/: easytool-link.md  macos.md  requirements.md
docs/superpowers/specs/: 2026-05-27-mumu-cross-platform-app-design.md  2026-05-28-easytool-personal-media-link-design.md
src/: App.tsx  api.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
