[package]
name = "dewu-capture-app"
version = "0.1.1"
description = "MuMu-based Dewu media capture desktop app"
authors = ["Dewu Capture"]
edition = "2021"

[lib]
name = "dewu_capture_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
